# mm-pysdk

./: .gitignore  README.md  a.py  example_usage.py  postgres_data.csv  pyproject.toml
docs/: README.md  authentication.md  index.md  installation.md  quick-start.md
docs/advanced/: integrations.md
docs/api/: client.md  exports.md  files.md  jobs.md  models.md
docs/api/models/: exports.md  files.md  jobs.md
docs/examples/: basic-usage.md  best-practices.md  error-handling.md
mammoth/: __init__.py  client.py  exceptions.py
mammoth/api/: __init__.py  exports.py  files.py  jobs.py
mammoth/models/: __init__.py  exports.py  files.py  jobs.py
mammoth/utils/: __init__.py  helpers.py
